Rewriting as suggested by @SirYwell and @I-AI-Istannen