@@ -25,9 +25,9 @@ import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import spoon.Launcher;
 import spoon.SpoonAPI;
-import spoon.reflect.CtModel;
 import spoon.reflect.code.CtAssignment;
 import spoon.reflect.code.CtConstructorCall;
 import spoon.reflect.code.CtIf;
@@ -41,14 +41,17 @@ import spoon.reflect.factory.Factory;
 import spoon.reflect.reference.CtIntersectionTypeReference;
 import spoon.reflect.reference.CtTypeParameterReference;
 import spoon.reflect.reference.CtTypeReference;
-import spoon.reflect.visitor.Filter;
 import spoon.reflect.visitor.filter.TypeFilter;
 import spoon.test.constructor.testclasses.AClass;
 import spoon.test.constructor.testclasses.ImplicitConstructor;
 import spoon.test.constructor.testclasses.Tacos;
+import spoon.testing.utils.BySimpleName;
+import spoon.testing.utils.LineSeparatorExtension;
+import spoon.testing.utils.ModelTest;
 import spoon.testing.utils.ModelUtils;
 
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -252,66 +255,47 @@ public class ConstructorTest {
 	}
 
 	@Test
-	public void testFlexibleConstructorBody() {
+	@ExtendWith(LineSeparatorExtension.class)
+	@ModelTest(value = {"src/test/resources/constructor/Employee.java"}, complianceLevel = 25)
+	public void testFlexibleConstructorBody(@BySimpleName("Employee") CtClass<?> cl, Factory factory) {
 		// contract: with Java 25 flexible constructor bodies, statements can be inserted before super() or this() in constructors
-		Launcher launcher = new Launcher();
-		launcher.getEnvironment().setComplianceLevel(25);
-		launcher.addInputResource("src/test/resources/constructor/Employee.java");
-		CtModel model = launcher.buildModel();
-
-		CtClass<?> cl = model.getElements(
-			(Filter<CtClass<?>>) element -> element.getSimpleName().equals("Employee")
-		).get(0);
 		assertThat(cl).getConstructors().hasSize(2);
 
 		// Test for public Employee(String name, int age, String officeID)
-		CtConstructor<?> constructor0 = cl.getConstructors().stream()
-			.filter(c -> c.getParameters().size() == 3)
-			.iterator().next();
+		CtConstructor<?> constructor0 = cl.getConstructor(
+			factory.Type().stringType(), factory.Type().integerPrimitiveType(), factory.Type().stringType()
+		);
 		assertThat(constructor0).getBody().getStatements().hasSize(3);
 		List<CtStatement> statements0 = constructor0.getBody().getStatements();
 		assertThat(statements0.get(0)).isInstanceOf(CtIf.class);
 		assertThat(statements0.get(1)).isInstanceOf(CtInvocation.class);
-		assertTrue(((CtInvocation<?>) statements0.get(1)).getExecutable().isConstructor());
+		assertThat(((CtInvocation<?>) statements0.get(1)).getExecutable().isConstructor()).isTrue();
 		assertThat(statements0.get(2)).isInstanceOf(CtAssignment.class);
 
-		assertEquals(
-			Arrays.asList(
-				"""
-					if ((age < 18) || (age > 65)) {
-					    throw new java.lang.IllegalArgumentException();
-					}""",
-				"super(name, age)",
-				"this.officeID = officeID"
-			),
-			statements0.stream()
-				.map(String::valueOf)
-				.map(s -> s.replaceAll("\\R", "\n")) // fix newlines on windows
-				.collect(Collectors.toList())
+		assertThat(statements0.stream().map(String::valueOf).toList()).containsExactly(
+			"""
+				if ((age < 18) || (age > 65)) {
+				    throw new java.lang.IllegalArgumentException();
+				}""",
+			"super(name, age)",
+			"this.officeID = officeID"
 		);
 
 		// Test for public Employee(int age, String officeID)
-		CtConstructor<?> constructor1 = cl.getConstructors().stream()
-			.filter(c -> c.getParameters().size() == 2)
-			.iterator().next();
+		CtConstructor<?> constructor1 = cl.getConstructor(
+			factory.Type().integerPrimitiveType(), factory.Type().stringType()
+		);
 		assertThat(constructor1).getBody().getStatements().hasSize(2);
 		List<CtStatement> statements1 = constructor1.getBody().getStatements();
 		assertThat(statements1.get(0)).isInstanceOf(CtIf.class);
 		assertThat(statements1.get(1)).isInstanceOf(CtInvocation.class);
-		assertTrue(((CtInvocation<?>) statements1.get(1)).getExecutable().isConstructor());
+		assertThat(((CtInvocation<?>) statements1.get(1)).getExecutable().isConstructor()).isTrue();
 
-		assertEquals(
-			Arrays.asList(
-				"""
-					if ((age < 18) || (age > 65)) {
-					    throw new java.lang.IllegalArgumentException();
-					}""",
-				"this(\"Bob\", age, officeID)"
-			),
-			statements1.stream()
-				.map(String::valueOf)
-				.map(s -> s.replaceAll("\\R", "\n")) // fix newlines on windows
-				.collect(Collectors.toList())
+		assertThat(statements1.stream().map(String::valueOf).toList()).containsExactly(
+			"""
+				if ((age < 18) || (age > 65)) {
+				    throw new java.lang.IllegalArgumentException();
+				}""",
+			"this(\"Bob\", age, officeID)"
 		);
-	}
-}
+	}}
